--- a/lista_prospecto_general.html
+++ b/lista_prospecto_general.html
@@ -51,7 +51,9 @@
             <li><a href="panelPaginasPersonales.html">Panel de Control</a></li>
             </li>
             <li>
-              <a id="generarReporte" href="#">Generar Reporte EXCEL</a>
+              <a href="#" id="generarReporte">
+                Generar Reporte EXCEL
+              </a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -91,9 +93,6 @@
           </thead>
         </table>
       </div>
-      <a href="#" onclick="return ExcellentExport.excel(this, 'tablaBusqueda', 'Reporte');" class="btn btn-success btn-lg" id="buttonDescarga">
-        <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Exportar a Excel
-      </a>
       <div align="center">
         <nav aria-label="...">
           <ul class="pager">
