--- a/lista_prospecto_general.html
+++ b/lista_prospecto_general.html
@@ -60,6 +60,7 @@
         </div>
     </div>
   </div>
+  <!--NEW <span class="label label-success">Nuevo</span> -->
   <!-- CONTAINER DE LA TABLA -->
   <div class="container" id="hideContainer">
     <div class="jumbotron">
