se arreglo la imagen de perfil

--- a/perfil_entrenador.html
+++ b/perfil_entrenador.html
@@ -266,6 +266,9 @@
         var divImg = document.getElementById('imagenEntrenador');
         var img = document.createElement('img');
         img.setAttribute("src", url);
+        img.setAttribute("class", "img-responsive");
+        img.setAttribute("alt", "Responsive image");
+        
         divImg.appendChild(img);
       }).catch(function(error) {
         switch (error.code) {
