Boton de copiar

--- a/panelPaginasPersonales.html
+++ b/panelPaginasPersonales.html
@@ -172,8 +172,9 @@
           texto.focus();
           texto.select();
           document.execCommand('Copy');
+          //copy(getSelection().toString())
         });
-
+        
         span.appendChild(button);
         div2.appendChild(input);
         div2.appendChild(span);
