--- a/panelPaginasPersonales.html
+++ b/panelPaginasPersonales.html
@@ -30,6 +30,7 @@
     <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="dist/js/bootstrap.min.js"></script>
     <script src="assets/js/docs.min.js"></script>
+    <script src="dist/js/clipboard.min.js"></script>
     <style>
     .margintop{
       margin-top: 7px;
@@ -165,16 +166,17 @@
         button.setAttribute("class","btn btn-primary");
         button.setAttribute("type","button");
         button.setAttribute("id","linkPersonal");
+        button.setAttribute("data-clipboard-target", "#linkEntrenadorPersonal")
 
         button.addEventListener('click', function () {
           console.log("se hizo click");
           var texto = document.getElementById('linkEntrenadorPersonal'); 
-          texto.focus();
-          texto.select();
-          document.execCommand('Copy');
+          //texto.focus();
+          //texto.select();
+          //document.execCommand('Copy');
           //copy(getSelection().toString())
         });
-        
+
         span.appendChild(button);
         div2.appendChild(input);
         div2.appendChild(span);
@@ -182,6 +184,8 @@
         div.appendChild(div2);
         console.log("Lijto pariente");
       }
+
+      new Clipboard('#linkPersonal');
     </script>
   </body>
 </html>
