--- a/lista_prospecto_seminario_jueves.html
+++ b/lista_prospecto_seminario_jueves.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="icon" href="images/ic_launcher.png">
-  <title>Lista - Registro General</title>
+  <title>Lista - Seminario (Lunes)</title>
   <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
@@ -84,12 +84,10 @@
               <th class="col-md-2">Nombre</th>
               <th>Celular</th>
               <th class="col-md-2">Email</th>
-              <th class="col-md-2">Regalo</th>
-              <th class="col-md-2">Información</th>
               <th class="col-md-2">Ciudad</th>
               <th>País</th>
               <th>Hora</th>
-              <th>Fecha de registro</th>
+              <th class="col-md-1">Fecha de registro</th>
             </tr>
           </thead>
         </table>
@@ -105,7 +103,7 @@
     </div> <!-- /jumbotron -->
   </div> <!-- /container -->
   <br>
-  <script src="listado.js"></script>
+  <script src="listadoJueves.js"></script>
   <script>
   if(localStorage.getItem("key")){
   }else{
