--- a/perfil_entrenador.html
+++ b/perfil_entrenador.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta property="og:title" content="..:: Nivel 10 ::.."/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="http://nivel10.org/n10-registro/"/>
+  <meta property="og:image" content="http://i347.photobucket.com/albums/p465/Geovani_Mendoza/img2_zpspv8qztuw.jpg"/>
+  <meta property="og:image:width" content="851"/>
+  <meta property="og:image:height" content="315"/>
+  <meta property="og:description" content="..."/>
+  <meta property="og:site_name" content="http://nivel10.org"/>
+  <meta property="fb:admins" content="100011685509239"/>
+  <meta property="fb:app_id" content="1853521954877739"/>
   <link rel="icon" href="images/ic_launcher.png">
-  <title>Registro de Entrenadores</title>
+  <title>Perfil de Entrenador</title>
 
   <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
   <script>
@@ -80,7 +88,7 @@
           <div class="panel-body">
             <h4>
               <label> Nombre: </label>
-              <h4 id="nombreEntrenador">  </h4>
+              <label id="nombreEntrenador"></label>
             </h4>
           </div>
           <div class="panel-body">
@@ -123,7 +131,249 @@
 
               <div class="form-group input-group-lg">
                   <label for="inputPais" >País:</label>
-                  <input type="text" id="inputPais" class="form-control" placeholder="ingresa tu país..." aria-describedby="sizing-addon1" required>
+                  <!--<input type="text" id="inputPais" class="form-control" placeholder="ingresa tu país..." aria-describedby="sizing-addon1" required>-->
+                  <select class="form-control" id="inputPais">
+                    <option value="" selected>Por favor selecciona un País
+                    <option value="Afghanistan">Afghanistan
+                    <option value="Albania">Albania
+                    <option value="Algeria">Algeria
+                    <option value="American Samoa">American Samoa
+                    <option value="Andorra">Andorra
+                    <option value="Angola">Angola
+                    <option value="Anguilla">Anguilla
+                    <option value="Antarctica">Antarctica
+                    <option value="Antigua and Barbuda">Antigua and Barbuda
+                    <option value="Argentina">Argentina
+                    <option value="Armenia">Armenia
+                    <option value="Aruba">Aruba
+                    <option value="Australia">Australia
+                    <option value="Austria">Austria
+                    <option value="Azerbaijan">Azerbaijan
+                    <option value="Bahamas">Bahamas
+                    <option value="Bahrain">Bahrain
+                    <option value="Bangladesh">Bangladesh
+                    <option value="Barbados">Barbados
+                    <option value="Belarus">Belarus
+                    <option value="Belgium">Belgium
+                    <option value="Belize">Belize
+                    <option value="Benin">Benin
+                    <option value="Bermuda">Bermuda
+                    <option value="Bhutan">Bhutan
+                    <option value="Bolivia">Bolivia
+                    <option value="Bosnia and Herzegowina">Bosnia and Herzegowina
+                    <option value="Botswana">Botswana
+                    <option value="Bouvet Island">Bouvet Island
+                    <option value="Brazil">Brazil
+                    <option value="British Indian Ocean Territory">British Indian Ocean Territory
+                    <option value="Brunei Darussalam">Brunei Darussalam
+                    <option value="Bulgaria">Bulgaria
+                    <option value="Burkina Faso">Burkina Faso
+                    <option value="Burundi">Burundi
+                    <option value="Cambodia">Cambodia
+                    <option value="Cameroon">Cameroon
+                    <option value="Canada">Canada
+                    <option value="Cape Verde">Cape Verde
+                    <option value="Cayman Islands">Cayman Islands
+                    <option value="Central African Republic">Central African Republic
+                    <option value="Chad">Chad
+                    <option value="Chile">Chile
+                    <option value="China">China
+                    <option value="Christmas Island">Christmas Island
+                    <option value="Cocos (Keeling) Islands">Cocos (Keeling) Islands
+                    <option value="Colombia">Colombia
+                    <option value="Comoros">Comoros
+                    <option value="Congo">Congo
+                    <option value="Congo, the Democratic Republic of the">Congo, the Democratic Republic of the
+                    <option value="Cook Islands">Cook Islands
+                    <option value="Costa Rica">Costa Rica
+                    <option value="Cote d'Ivoire">Cote d'Ivoire
+                    <option value="Croatia (Hrvatska)">Croatia (Hrvatska)
+                    <option value="Cuba">Cuba
+                    <option value="Cyprus">Cyprus
+                    <option value="Czech Republic">Czech Republic
+                    <option value="Denmark">Denmark
+                    <option value="Djibouti">Djibouti
+                    <option value="Dominica">Dominica
+                    <option value="Dominican Republic">Dominican Republic
+                    <option value="East Timor">East Timor
+                    <option value="Ecuador">Ecuador
+                    <option value="Egypt">Egypt
+                    <option value="El Salvador">El Salvador
+                    <option value="Equatorial Guinea">Equatorial Guinea
+                    <option value="Eritrea">Eritrea
+                    <option value="Estonia">Estonia
+                    <option value="Ethiopia">Ethiopia
+                    <option value="Falkland Islands (Malvinas)">Falkland Islands (Malvinas)
+                    <option value="Faroe Islands">Faroe Islands
+                    <option value="Fiji">Fiji
+                    <option value="Finland">Finland
+                    <option value="France">France
+                    <option value="France, Metropolitan">France, Metropolitan
+                    <option value="French Guiana">French Guiana
+                    <option value="French Polynesia">French Polynesia
+                    <option value="French Southern Territories">French Southern Territories
+                    <option value="Gabon">Gabon
+                    <option value="Gambia">Gambia
+                    <option value="Georgia">Georgia
+                    <option value="Germany">Germany
+                    <option value="Ghana">Ghana
+                    <option value="Gibraltar">Gibraltar
+                    <option value="Greece">Greece
+                    <option value="Greenland">Greenland
+                    <option value="Grenada">Grenada
+                    <option value="Guadeloupe">Guadeloupe
+                    <option value="Guam">Guam
+                    <option value="Guatemala">Guatemala
+                    <option value="Guinea">Guinea
+                    <option value="Guinea-Bissau">Guinea-Bissau
+                    <option value="Guyana">Guyana
+                    <option value="Haiti">Haiti
+                    <option value="Heard and Mc Donald Islands">Heard and Mc Donald Islands
+                    <option value="Holy See (Vatican City State)">Holy See (Vatican City State)
+                    <option value="Honduras">Honduras
+                    <option value="Hong Kong">Hong Kong
+                    <option value="Hungary">Hungary
+                    <option value="Iceland">Iceland
+                    <option value="India">India
+                    <option value="Indonesia">Indonesia
+                    <option value="Iran (Islamic Republic of)">Iran (Islamic Republic of)
+                    <option value="Iraq">Iraq
+                    <option value="Ireland">Ireland
+                    <option value="Israel">Israel
+                    <option value="Italy">Italy
+                    <option value="Jamaica">Jamaica
+                    <option value="Japan">Japan
+                    <option value="Jordan">Jordan
+                    <option value="Kazakhstan">Kazakhstan
+                    <option value="Kenya">Kenya
+                    <option value="Kiribati">Kiribati
+                    <option value="Democratic People's Republic of Korea">Democratic People's Republic of Korea
+                    <option value="Republic of Korea">Republic of Korea
+                    <option value="Kuwait">Kuwait
+                    <option value="Kyrgyzstan">Kyrgyzstan
+                    <option value="Lao People's Democratic Republic">Lao People's Democratic Republic
+                    <option value="Latvia">Latvia
+                    <option value="Lebanon">Lebanon
+                    <option value="Lesotho">Lesotho
+                    <option value="Liberia">Liberia
+                    <option value="Libyan Arab Jamahiriya">Libyan Arab Jamahiriya
+                    <option value="Liechtenstein">Liechtenstein
+                    <option value="Lithuania">Lithuania
+                    <option value="Luxembourg">Luxembourg
+                    <option value="Macau">Macau
+                    <option value="The Former Yugoslav Republic of Macedonia">The Former Yugoslav Republic of Macedonia
+                    <option value="Madagascar">Madagascar
+                    <option value="Malawi">Malawi
+                    <option value="Malaysia">Malaysia
+                    <option value="Maldives">Maldives
+                    <option value="Mali">Mali
+                    <option value="Malta">Malta
+                    <option value="Marshall Islands">Marshall Islands
+                    <option value="Martinique">Martinique
+                    <option value="Mauritania">Mauritania
+                    <option value="Mauritius">Mauritius
+                    <option value="Mayotte">Mayotte
+                    <option value="Mexico">Mexico
+                    <option value="Federated States of Micronesia">Federated States of Micronesia
+                    <option value="Republic of Moldova">Republic of Moldova
+                    <option value="Monaco">Monaco
+                    <option value="Mongolia">Mongolia
+                    <option value="Montserrat">Montserrat
+                    <option value="Morocco">Morocco
+                    <option value="Mozambique">Mozambique
+                    <option value="Myanmar">Myanmar
+                    <option value="Namibia">Namibia
+                    <option value="Nauru">Nauru
+                    <option value="Nepal">Nepal
+                    <option value="Netherlands">Netherlands
+                    <option value="Netherlands Antilles">Netherlands Antilles
+                    <option value="New Caledonia">New Caledonia
+                    <option value="New Zealand">New Zealand
+                    <option value="Nicaragua">Nicaragua
+                    <option value="Niger">Niger
+                    <option value="Nigeria">Nigeria
+                    <option value="Niue">Niue
+                    <option value="Norfolk Island">Norfolk Island
+                    <option value="Northern Mariana Islands">Northern Mariana Islands
+                    <option value="Norway">Norway
+                    <option value="Oman">Oman
+                    <option value="Pakistan">Pakistan
+                    <option value="Palau">Palau
+                    <option value="Panama">Panama
+                    <option value="Papua New Guinea">Papua New Guinea
+                    <option value="Paraguay">Paraguay
+                    <option value="Peru">Peru
+                    <option value="Philippines">Philippines
+                    <option value="Pitcairn">Pitcairn
+                    <option value="Poland">Poland
+                    <option value="Portugal">Portugal
+                    <option value="Puerto Rico">Puerto Rico
+                    <option value="Qatar">Qatar
+                    <option value="Reunion">Reunion
+                    <option value="Romania">Romania
+                    <option value="Russian Federation">Russian Federation
+                    <option value="Rwanda">Rwanda
+                    <option value="Saint Kitts and Nevis">Saint Kitts and Nevis
+                    <option value="Saint LUCIA">Saint LUCIA
+                    <option value="Saint Vincent and the Grenadines">Saint Vincent and the Grenadines
+                    <option value="Samoa">Samoa
+                    <option value="San Marino">San Marino
+                    <option value="Sao Tome and Principe">Sao Tome and Principe
+                    <option value="Saudi Arabia">Saudi Arabia
+                    <option value="Senegal">Senegal
+                    <option value="Seychelles">Seychelles
+                    <option value="Sierra Leone">Sierra Leone
+                    <option value="Singapore">Singapore
+                    <option value="Slovakia (Slovak Republic)">Slovakia (Slovak Republic)
+                    <option value="Slovenia">Slovenia
+                    <option value="Solomon Islands">Solomon Islands
+                    <option value="Somalia">Somalia
+                    <option value="South Africa">South Africa
+                    <option value="South Georgia and the South Sandwich Islands">South Georgia and the South Sandwich Islands
+                    <option value="Spain">Spain
+                    <option value="Sri Lanka">Sri Lanka
+                    <option value="St. Helena">St. Helena
+                    <option value="St. Pierre and Miquelon">St. Pierre and Miquelon
+                    <option value="Sudan">Sudan
+                    <option value="Suriname">Suriname
+                    <option value="Svalbard and Jan Mayen Islands">Svalbard and Jan Mayen Islands
+                    <option value="Swaziland">Swaziland
+                    <option value="Sweden">Sweden
+                    <option value="Switzerland">Switzerland
+                    <option value="Syrian Arab Republic">Syrian Arab Republic
+                    <option value="Taiwan, Province of China">Taiwan, Province of China
+                    <option value="Tajikistan">Tajikistan
+                    <option value="United Republic of Tanzania">United Republic of Tanzania
+                    <option value="Thailand">Thailand
+                    <option value="Togo">Togo
+                    <option value="Tokelau">Tokelau
+                    <option value="Tonga">Tonga
+                    <option value="Trinidad and Tobago">Trinidad and Tobago
+                    <option value="Tunisia">Tunisia
+                    <option value="Turkey">Turkey
+                    <option value="Turkmenistan">Turkmenistan
+                    <option value="Turks and Caicos Islands">Turks and Caicos Islands
+                    <option value="Tuvalu">Tuvalu
+                    <option value="Uganda">Uganda
+                    <option value="Ukraine">Ukraine
+                    <option value="United Arab Emirates">United Arab Emirates
+                    <option value="United Kingdom">United Kingdom
+                    <option value="United States">United States
+                    <option value="United States Minor Outlying Islands">United States Minor Outlying Islands
+                    <option value="Uruguay">Uruguay
+                    <option value="Uzbekistan">Uzbekistan
+                    <option value="Vanuatu">Vanuatu
+                    <option value="Venezuela">Venezuela
+                    <option value="Viet Nam">Viet Nam
+                    <option value="Virgin Islands (British)">Virgin Islands (British)
+                    <option value="Virgin Islands (U.S.)">Virgin Islands (U.S.)
+                    <option value="Wallis and Futuna Islands">Wallis and Futuna Islands
+                    <option value="Western Sahara">Western Sahara
+                    <option value="Yemen">Yemen
+                    <option value="Yugoslavia">Yugoslavia
+                    <option value="Zambia">Zambia
+                    <option value="Zimbabwe">Zimbabwe
+                  </select>
               </div>
               <div class="form-group input-group-lg">
                   <label for="inputRegalo">Elige tu Regalo:</label>
@@ -186,7 +436,7 @@
       <div class="col-xs-6 col-md-5">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <label><h4><b> Horarios Reuniones </b></h4></label>
+            <label><h4><b>Reunión Virtual </b></h4></label>
           </div>
           <div class="panel-body">
             <h4>
@@ -212,9 +462,7 @@
     -->
   </div>
   <footer class ="bs-docs-footer textcolorWhite" role="contentinfo">
-    <p>
-      <h3>Siguenos en</h3>
-    </p>
+    <p> <h3>Siguenos en</h3>
     <p>
       <a href="https://www.facebook.com/myNivel10/" target="_blank"><img src="images/social/facebook.png" width="60px" height="60px"></img></a>
       <a href="https://www.instagram.com/nivel10_fit/" target="_blank"><img src="images/social/instagram.png" width="60px" height="60px"></img></a>
@@ -299,5 +547,21 @@
       codigo.innerHTML = "Ingresa el código <b>"+data.codigo+"</b>";
     }
   </script>
+  <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1853521954877739',
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+  };
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 </body>
 </html>
