Imagen super guay

--- a/perfil_entrenador.html
+++ b/perfil_entrenador.html
@@ -75,12 +75,12 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col-xs-4 col-md-4">
+      <div class="col-md-4">
         <div id="imagenEntrenador" class="imagenPerfil"></div>
       </div>
-      <div class="col-xs-0 col-md-1">
+      <div class="col-md-1">
       </div>
-      <div class="col-xs-8 col-md-7">
+      <div class="col-md-7">
         <div class="panel panel-default">
           <div class="panel-heading">
             <!--<label><h4><b> Información del entrenador </b></h4></label>
