--- a/lista_prospecto_general.html
+++ b/lista_prospecto_general.html
@@ -105,6 +105,8 @@
     </div> <!-- /jumbotron -->
   </div> <!-- /container -->
   <br>
+  <script type="text/javascript" src="dist/js/sheetjs.all.min.js"></script>
+  <script type="text/javascript" src="dist/js/ExcelPlus-2.4.min.js"></script>
   <script src="listado.js"></script>
   <script>
   if(localStorage.getItem("key")){
